--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,15 +6,17 @@
     text-decoration: none;
 }
 
-
-h1{
-    
-    color: var(--color);
+.divhero img {
+    display: block;
+    width: 20%;
+    height: auto;
+    float: right;
 }
 
 h1{
     position:absolute;
     float:left;
+    color: var(--color);
     align-content: center;
     font-size: 50px;
     border-bottom: 1px solid #999;
@@ -22,28 +24,24 @@ h1{
 
 }
 
-h2{
-    color:#141DCC;
-}
-
-#img1{
-    width: 100%;
-}
-
 .article{
-    
-    float: right;
-	background: radial-gradient(#eee, #1E619C);
+    position:absolute;
+    bottom: 300px;
+	background: radial-gradient(#eee, #003665);
 	border: 1px solid #000;
 	padding: 0.65rem;
 	box-shadow: 0 0 30px #111;
 	opacity: 0.9;
 }
 
-#img2 {
-    width: 30%;
+#img1{
+    width: 100%;
 }
-    
+
+h2{
+    color:#141DCC;
+}
+ 
 * {
     font-family: "Noto Sans", serif;
     font-optical-sizing: auto;
@@ -61,7 +59,9 @@ p{
 }
 
 #rafting0 img{
-    width: 80%;
+    width: 50%;
 
 }
+
+
 
