--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,11 @@
-:root{
-    --color:#FFFFFF;
+:root {
+    --color: #171a21;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+
 }
 
 .underlines a {
@@ -7,59 +13,51 @@
 }
 
 .divhero img {
+    position: relative;
     display: block;
     width: 20%;
     height: auto;
     float: right;
 }
 
-h1{
-    position:absolute;
-    float:left;
+.divhero h1 {
     color: var(--color);
+    text-align: center;
     align-content: center;
     font-size: 50px;
     border-bottom: 1px solid #999;
-	margin-bottom: 0.3rem;
-
+    margin-bottom: 0.3rem;
 }
 
-article {
-    position:absolute;
-    bottom: 300px;
-	background: radial-gradient(#eee, #003665);
-	border: 1px solid #000;
-	padding: 0.65rem;
-	box-shadow: 0 0 30px #111;
-	opacity: 0.9;
-}
 
-#img1{
+#img1 {
     width: 100%;
 }
 
-h2{
-    color:#141DCC;
-}
- 
-* {
-    font-family: "Noto Sans", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100; 
+article {
+    position: absolute;
+    top: 280px;
+    background: radial-gradient(#eee, #003665);
+    border: 1px solid #000;
+    padding: 0.65rem;
+    box-shadow: 0 0 30px #111;
+    opacity: 0.9;
 }
 
-p{
-    font-family: "Raleway", serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-#rafting0 img{
+#rafting0 img {
     width: 50%;
 
 }
 
+h2 {
+    color: #141DCC;
+}
 
+body {
+    font-family: "Noto Sans", serif
+}
 
+p {
+    font-family: "Raleway", serif;
+    font-weight: 400;
+    font-style: normal}
