--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,53 @@
-:root{
+:root {
     --aside-width: 20rem;
     --aside-border: 1px solid rgb(0 0 0 / 0.2);
     --nav-background-color: darkblue;
 }
 
+header,
+footer,
+.grid {
+    margin: 0 auto;
+    max-width: 840px;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+    max-width: 840px;
+}
+
+aside {
+    width: var(--aside-width);
+    margin: 1rem;
+    border: var(--aside-border);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+    position: relative;
+    grid-row: 1/2;
+}
+
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: 1rem;
+    background-color: #eee;
+    color: #000;
+}
+
 nav {
     background-color: var(--nav-background-color);
-    padding:10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
@@ -16,51 +57,35 @@ nav a {
 }
 
 h1 {
-    color:darkblue;
+    color: darkblue;
+    align-content: center;
+    border-bottom: 3px solid darkblue;
+    margin-bottom: 1rem;
 }
 
 img {
-    width:150px;
+    width: 150px;
     height: auto;
-    border: 1px solid block;
+    border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
 
-p {
-    padding:10px;
+main img {
+    width: 150px;
+    height: auto;
 }
 
-main{
-    max-width: 840px;
-}
-
-aside{
-    width: var(--aside-width);
-    margin: 1rem;
-    border: var(--aside-border);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
-    text-align: center;
-}
-
-aside img{
+aside img {
     width: 200px;
     height: auto;
 }
 
-main img{
-    width:150px;
-    height: auto;
+p {
+    padding: 10px;
 }
 
-p{
-    padding: 0;
-}
-
-footer{
+footer {
     margin-top: 15px;
     border-top: 1px solid #000;
-    text-align: center;
-}
+    text-align: center;}
