--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,14 +1,42 @@
 :root {
-    --color: #171a21;
+    --color: #1E619C;
 }
 
 * {
     margin: 0;
     padding: 0;
-
+    box-sizing: border-box;
 }
 
-.underlines a {
+body {
+    font-family: "Noto Sans", serif;
+}
+
+header {
+    margin: 1rem auto;
+}
+
+.header-grid {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--color);
+    padding: 1rem;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    gap: 1rem;
+}
+
+nav a {
+    color: white;
     text-decoration: none;
 }
 
@@ -23,12 +51,10 @@
 .divhero h1 {
     color: var(--color);
     text-align: center;
-    align-content: center;
     font-size: 50px;
     border-bottom: 1px solid #999;
     margin-bottom: 0.3rem;
 }
-
 
 #img1 {
     width: 100%;
@@ -46,18 +72,35 @@ article {
 
 #rafting0 img {
     width: 50%;
-
 }
 
 h2 {
     color: #141DCC;
 }
 
-body {
-    font-family: "Noto Sans", serif
-}
-
 p {
     font-family: "Raleway", serif;
     font-weight: 400;
-    font-style: normal}
+    font-style: normal;
+}
+
+.adventures-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1rem;
+    margin: 1rem 0;
+}
+
+.adventures-grid figure {
+    text-align: center;
+}
+
+.adventures-grid img {
+    width: 100%;
+    height: auto;
+}
+
+.adventures-grid figcaption {
+    margin-top: 0.5rem;
+    font-weight: bold;
+}
