--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -104,3 +104,9 @@ p {
     margin-top: 0.5rem;
     font-weight: bold;
 }
+
+footer nav.underlines {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+}
